--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-portal": "^4.2.2",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/react-portal": "^4.0.4",
     "prisma": "^4.14.1",
     "tailwindcss-animate": "^1.0.5"
   }
