--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "formidable": "^2.1.1",
+    "multer": "^1.4.5-lts.1",
     "next": "13.4.2",
+    "next-connect": "^1.0.0-next.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,6 +31,8 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/formidable": "^2.0.6",
+    "@types/multer": "^1.4.7",
     "@types/react-portal": "^4.0.4",
     "prisma": "^4.14.1",
     "tailwindcss-animate": "^1.0.5"
