--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "react-portal": "^4.2.2",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@types/formidable": "^2.0.6",
     "@types/multer": "^1.4.7",
     "@types/react-portal": "^4.0.4",
+    "@types/validator": "^13.7.17",
     "prisma": "^4.14.1",
     "tailwindcss-animate": "^1.0.5"
   }
