--- a/.env
+++ b/.env
@@ -5,10 +5,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://admin:Dio0pro1420.@maxtermedia.5uvmmib.mongodb.net/test"
-UPLOAD_URL="localhost:3000/api/upload"
-AGENCIES_URL="localhost:3000/api/agencies"
-GROUPS_URL="localhost:3000/api/groups"
-NEWGROUP_URL="localhost:3000/api/new-group"
-NEWAGENCY_URL="localhost:3000/api/new-agency"
-EDITAGENCY_URL="localhost:3000/api/edit-agency"
-EDITGROUP_URL="localhost:3000/api/edit-group"
+UPLOAD_URL="/api/upload"
+AGENCIES_URL="/api/agencies"
+GROUPS_URL="/api/groups"
+NEWGROUP_URL="/api/new-group"
+NEWAGENCY_URL="/api/new-agency"
+EDITAGENCY_URL="/api/edit-agency"
+EDITGROUP_URL="/api/edit-group"
