--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/storage": "^6.10.1",
     "@prisma/client": "^4.15.0",
     "@types/node": "20.1.5",
     "@types/react": "18.2.6",
