--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "express": "^4.18.2",
     "formidable": "^2.1.1",
+    "formidable-serverless": "^1.1.1",
+    "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "next": "13.4.2",
     "next-connect": "^1.0.0-next.4",
@@ -31,12 +35,15 @@
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
+    "unzipper": "^0.10.14",
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/formidable": "^2.0.6",
     "@types/multer": "^1.4.7",
     "@types/react-portal": "^4.0.4",
+    "@types/unzipper": "^0.10.6",
     "@types/validator": "^13.7.17",
     "prisma": "^4.15.0",
     "tailwindcss-animate": "^1.0.5"
