Upload method finished, adding a transfer queue

--- a/.env
+++ b/.env
@@ -19,9 +19,9 @@
 
 
 DATABASE_URL="mongodb+srv://admin:Dio0pro1420.@maxtermedia.5uvmmib.mongodb.net/test"
-GCLOUD_PROJECT='smiling-height-388402'
-BUCKET_NAME='maxter-media'
-BUCKET_KEYFILE="./env/smiling-height-388402-13b1c5f289b7.json"
+NEXT_PUBLIC_GCLOUD_PROJECT='smiling-height-388402'
+NEXT_PUBLIC_BUCKET_NAME='maxter-media'
+NEXT_PUBLIC_BUCKET_KEYFILE="./env/smiling-height-388402-13b1c5f289b7.json"
 UPLOAD_URL="/api/upload"
 AGENCIES_URL="/api/agencies"
 GROUPS_URL="/api/groups"
