--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "13.4.2",
     "next-connect": "^1.0.0-next.4",
     "postcss": "8.4.23",
+    "queue": "^7.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
