--- a/package.json
+++ b/package.json
@@ -9,44 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@google-cloud/storage": "^6.10.1",
-    "@prisma/client": "^4.15.0",
-    "@types/node": "20.1.5",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
+    "@google-cloud/storage": "^6.11.0",
+    "@prisma/client": "^4.16.1",
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
-    "express": "^4.18.2",
-    "formidable": "^2.1.1",
-    "formidable-serverless": "^1.1.1",
+    "encoding": "^0.1.13",
+    "eslint": "8.43.0",
+    "eslint-config-next": "^13.4.7",
+    "gaxios": "^5.1.1",
+    "google-auth-library": "^8.8.0",
     "jsonwebtoken": "^9.0.0",
-    "multer": "^1.4.5-lts.1",
-    "next": "13.4.2",
-    "next-connect": "^1.0.0-next.4",
-    "postcss": "8.4.23",
+    "next": "13.4.7",
+    "next-connect": "^1.0.0",
+    "node-fetch": "^3.3.1",
+    "postcss": "8.4.24",
     "queue": "^7.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.10.1",
     "react-portal": "^4.2.2",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4",
-    "unzipper": "^0.10.14",
+    "typescript": "5.1.3",
     "validator": "^13.9.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/formidable": "^2.0.6",
-    "@types/multer": "^1.4.7",
     "@types/react-portal": "^4.0.4",
-    "@types/unzipper": "^0.10.6",
     "@types/validator": "^13.7.17",
-    "prisma": "^4.15.0",
-    "tailwindcss-animate": "^1.0.5"
+    "prisma": "^4.16.1",
+    "tailwindcss-animate": "^1.0.6"
   }
 }
