--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^4.10.1",
     "react-portal": "^4.2.2",
     "react-toastify": "^9.1.3",
+    "request": "^2.88.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "validator": "^13.9.0"
