--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^6.11.0",
+    "@google-cloud/video-intelligence": "^4.2.2",
     "@prisma/client": "^4.16.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
@@ -36,7 +37,8 @@
     "request": "^2.88.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "video.js": "^8.3.0"
   },
   "devDependencies": {
     "@types/react-portal": "^4.0.4",
