--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@google-cloud/storage": "^6.11.0",
     "@google-cloud/video-intelligence": "^4.2.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.16.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "encoding": "^0.1.13",
     "eslint": "8.43.0",
     "eslint-config-next": "^13.4.7",
@@ -24,6 +26,7 @@
     "google-auth-library": "^8.8.0",
     "jsonwebtoken": "^9.0.0",
     "next": "13.4.7",
+    "next-auth": "^4.22.1",
     "next-connect": "^1.0.0",
     "node-fetch": "^3.3.1",
     "postcss": "8.4.24",
@@ -41,6 +44,7 @@
     "video.js": "^8.3.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/react-portal": "^4.0.4",
     "@types/validator": "^13.7.17",
     "prisma": "^4.16.1",
