--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.0",
     "encoding": "^0.1.13",
     "eslint": "8.43.0",
     "eslint-config-next": "^13.4.7",
@@ -44,6 +44,7 @@
     "video.js": "^8.3.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/react-portal": "^4.0.4",
     "@types/validator": "^13.7.17",
