Updated upload queue, implementation of Photos Upload

--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "encoding": "^0.1.13",
     "eslint": "8.43.0",
     "eslint-config-next": "^13.4.7",
+    "fastq": "^1.15.0",
     "gaxios": "^5.1.1",
     "google-auth-library": "^8.8.0",
     "jsonwebtoken": "^9.0.0",
+    "jszip": "^3.10.1",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "next-connect": "^1.0.0",
@@ -46,6 +48,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/jszip": "^3.4.1",
     "@types/react-portal": "^4.0.4",
     "@types/validator": "^13.7.17",
     "prisma": "^4.16.1",
