--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@google-cloud/video-intelligence": "^4.2.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.16.1",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "class-variance-authority": "^0.6.1",
+    "clsx": "^1.2.1",
     "encoding": "^0.1.13",
     "eslint": "8.43.0",
     "eslint-config-next": "^13.4.7",
@@ -27,6 +32,7 @@
     "google-auth-library": "^8.8.0",
     "jsonwebtoken": "^9.0.0",
     "jszip": "^3.10.1",
+    "lucide-react": "^0.259.0",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "next-connect": "^1.0.0",
@@ -40,6 +46,7 @@
     "react-portal": "^4.2.2",
     "react-toastify": "^9.1.3",
     "request": "^2.88.2",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "validator": "^13.9.0",
