--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "next-connect": "^1.0.0",
+    "next-themes": "^0.2.1",
     "node-fetch": "^3.3.1",
     "postcss": "8.4.24",
     "queue": "^7.0.0",
