--- a/package.json
+++ b/package.json
@@ -37,13 +37,16 @@
     "next-auth": "^4.22.1",
     "next-connect": "^1.0.0",
     "next-themes": "^0.2.1",
+    "node-cache": "^5.1.2",
     "node-fetch": "^3.3.1",
+    "photoswipe": "^5.3.8",
     "postcss": "8.4.24",
     "queue": "^7.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.10.1",
+    "react-photoswipe-gallery": "^2.2.7",
     "react-portal": "^4.2.2",
     "react-toastify": "^9.1.3",
     "request": "^2.88.2",
