--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "node-fetch": "^3.3.1",
     "photoswipe": "^5.3.8",
     "postcss": "8.4.24",
+    "qrcode.react": "^3.1.0",
     "queue": "^7.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-photoswipe-gallery": "^2.2.7",
     "react-portal": "^4.2.2",
