--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@google-cloud/storage": "^6.11.0",
-    "@google-cloud/video-intelligence": "^4.2.2",
+    "@google-cloud/storage": "^6.12.0",
+    "@google-cloud/video-intelligence": "^4.2.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -27,22 +27,22 @@
     "clsx": "^1.2.1",
     "encoding": "^0.1.13",
     "eslint": "8.43.0",
-    "eslint-config-next": "^13.4.7",
+    "eslint-config-next": "^13.4.12",
     "fastq": "^1.15.0",
-    "gaxios": "^5.1.1",
-    "google-auth-library": "^8.8.0",
-    "jsonwebtoken": "^9.0.0",
+    "gaxios": "^5.1.3",
+    "google-auth-library": "^8.9.0",
+    "jsonwebtoken": "^9.0.1",
     "jszip": "^3.10.1",
     "lucide-react": "^0.259.0",
     "next": "13.4.7",
-    "next-auth": "^4.22.1",
+    "next-auth": "^4.22.3",
     "next-connect": "^1.0.0",
     "next-themes": "^0.2.1",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.1",
     "photoswipe": "^5.3.8",
     "postcss": "8.4.24",
-    "qrcode.react": "^3.1.0",
+    "qrcode": "^1.5.3",
     "queue": "^7.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -54,7 +54,7 @@
     "react-redux": "^8.1.1",
     "react-toastify": "^9.1.3",
     "request": "^2.88.2",
-    "tailwind-merge": "^1.13.2",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "validator": "^13.9.0",
@@ -64,6 +64,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/jszip": "^3.4.1",
+    "@types/qrcode": "^1.5.1",
     "@types/react-portal": "^4.0.4",
     "@types/validator": "^13.7.17",
     "prisma": "^5.0.0",
