Updates on client side and codes functions, stable functionality of the app

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-pdf/renderer": "^3.1.12",
+    "@react-pdf/types": "^2.3.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
@@ -45,6 +47,7 @@
     "qrcode": "^1.5.3",
     "queue": "^7.0.0",
     "react": "18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.2",
