--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^6.12.0",
-    "@google-cloud/video-intelligence": "^4.2.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -19,10 +18,22 @@
     "@react-pdf/renderer": "^3.1.12",
     "@react-pdf/types": "^2.3.3",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tus/gcs-store": "1.0.0-beta.3",
+    "@tus/server": "1.0.0-beta.7",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
+    "@uppy/aws-s3": "^3.2.1",
+    "@uppy/core": "^3.3.1",
+    "@uppy/dashboard": "^3.5.0",
+    "@uppy/drag-drop": "^3.0.2",
+    "@uppy/file-input": "^3.0.2",
+    "@uppy/locales": "^3.2.4",
+    "@uppy/progress-bar": "^3.0.2",
+    "@uppy/react": "^3.1.3",
+    "@uppy/status-bar": "^3.2.3",
+    "@uppy/tus": "^3.1.2",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.6.1",
@@ -31,21 +42,16 @@
     "eslint": "8.43.0",
     "eslint-config-next": "^13.4.12",
     "fastq": "^1.15.0",
-    "gaxios": "^5.1.3",
     "google-auth-library": "^8.9.0",
-    "jsonwebtoken": "^9.0.1",
     "jszip": "^3.10.1",
     "lucide-react": "^0.259.0",
     "next": "13.4.7",
     "next-auth": "^4.22.3",
-    "next-connect": "^1.0.0",
     "next-themes": "^0.2.1",
     "node-cache": "^5.1.2",
-    "node-fetch": "^3.3.1",
     "photoswipe": "^5.3.8",
     "postcss": "8.4.24",
     "qrcode": "^1.5.3",
-    "queue": "^7.0.0",
     "react": "18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
@@ -53,14 +59,14 @@
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-photoswipe-gallery": "^2.2.7",
-    "react-portal": "^4.2.2",
     "react-redux": "^8.1.1",
     "react-toastify": "^9.1.3",
     "request": "^2.88.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
+    "tus": "^0.1.7",
+    "tus-js-client": "^3.1.0",
     "typescript": "5.1.3",
-    "validator": "^13.9.0",
     "video.js": "^8.3.0"
   },
   "devDependencies": {
