--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@uppy/status-bar": "^3.2.3",
     "@uppy/tus": "^3.1.2",
     "autoprefixer": "^10.4.14",
+    "aws-sdk": "^2.1430.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "canvas": "^2.11.2",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "encoding": "^0.1.13",
@@ -57,6 +59,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.2",
+    "react-hover-video-player": "^10.0.1",
     "react-icons": "^4.10.1",
     "react-photoswipe-gallery": "^2.2.7",
     "react-redux": "^8.1.1",
@@ -72,11 +75,14 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/fluent-ffmpeg": "^2.1.21",
     "@types/jszip": "^3.4.1",
     "@types/qrcode": "^1.5.1",
     "@types/react-portal": "^4.0.4",
     "@types/validator": "^13.7.17",
     "prisma": "^5.0.0",
-    "tailwindcss-animate": "^1.0.6"
+    "react-video-thumbnail": "^0.1.3",
+    "tailwindcss-animate": "^1.0.6",
+    "webpack-node-externals": "^3.0.0"
   }
 }
