--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@uppy/aws-s3": "^3.2.1",
+    "@uppy/aws-s3-multipart": "^3.5.2",
     "@uppy/core": "^3.3.1",
     "@uppy/dashboard": "^3.5.0",
     "@uppy/drag-drop": "^3.0.2",
