--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-hook-form": "^7.45.2",
     "react-hover-video-player": "^10.0.1",
     "react-icons": "^4.10.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-photoswipe-gallery": "^2.2.7",
     "react-redux": "^8.1.1",
     "react-toastify": "^9.1.3",
