--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tus/gcs-store": "1.0.0-beta.3",
     "@tus/server": "1.0.0-beta.7",
-    "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@uppy/aws-s3": "^3.2.1",
@@ -50,6 +49,7 @@
     "next": "13.4.7",
     "next-auth": "^4.22.3",
     "next-themes": "^0.2.1",
+    "pako": "^2.1.0",
     "photoswipe": "^5.3.8",
     "postcss": "8.4.24",
     "qrcode": "^1.5.3",
@@ -60,15 +60,12 @@
     "react-hook-form": "^7.45.2",
     "react-hover-video-player": "^10.0.1",
     "react-icons": "^4.10.1",
-    "react-loading-skeleton": "^3.3.1",
     "react-photoswipe-gallery": "^2.2.7",
     "react-redux": "^8.1.1",
     "react-toastify": "^9.1.3",
     "request": "^2.88.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
-    "tus": "^0.1.7",
-    "tus-js-client": "^3.1.0",
     "typescript": "5.1.3",
     "video.js": "^8.3.0"
   },
@@ -77,6 +74,8 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/fluent-ffmpeg": "^2.1.21",
     "@types/jszip": "^3.4.1",
+    "@types/node": "20.3.1",
+    "@types/pako": "^2.0.0",
     "@types/qrcode": "^1.5.1",
     "@types/react-portal": "^4.0.4",
     "@types/validator": "^13.7.17",
