--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "next": "13.4.7",
     "next-auth": "^4.22.3",
     "next-themes": "^0.2.1",
-    "pako": "^2.1.0",
+    "node-cache": "^5.1.2",
     "photoswipe": "^5.3.8",
     "postcss": "8.4.24",
     "qrcode": "^1.5.3",
