--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-redux": "^8.1.1",
     "react-toastify": "^9.1.3",
     "request": "^2.88.2",
+    "shaka-player": "^4.3.8",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
