--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-toastify": "^9.1.3",
     "request": "^2.88.2",
     "shaka-player": "^4.3.8",
+    "shaka-player-react": "^1.1.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
