--- a/package.json
+++ b/package.json
@@ -64,8 +64,9 @@
     "react-redux": "^8.1.1",
     "react-toastify": "^9.1.3",
     "request": "^2.88.2",
-    "shaka-player": "^4.3.8",
+    "shaka-player": "^4.3.9",
     "shaka-player-react": "^1.1.5",
+    "sharp": "^0.32.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
