--- a/package.json
+++ b/package.json
@@ -63,9 +63,8 @@
     "react-photoswipe-gallery": "^2.2.7",
     "react-redux": "^8.1.1",
     "react-toastify": "^9.1.3",
-    "request": "^2.88.2",
-    "shaka-player": "^4.3.9",
-    "shaka-player-react": "^1.1.5",
+    "resend": "^1.1.0",
+    "shaka-player": "^4.4.2",
     "sharp": "^0.32.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
@@ -76,7 +75,6 @@
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/fluent-ffmpeg": "^2.1.21",
-    "@types/jszip": "^3.4.1",
     "@types/node": "20.3.1",
     "@types/pako": "^2.0.0",
     "@types/qrcode": "^1.5.1",
