--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@google-cloud/storage": "^6.12.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -18,8 +17,7 @@
     "@react-pdf/renderer": "^3.1.12",
     "@react-pdf/types": "^2.3.3",
     "@reduxjs/toolkit": "^1.9.5",
-    "@tus/gcs-store": "1.0.0-beta.3",
-    "@tus/server": "1.0.0-beta.7",
+    "@types/photoswipe": "^4.1.5",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@uppy/aws-s3": "^3.2.1",
@@ -43,14 +41,14 @@
     "eslint": "8.43.0",
     "eslint-config-next": "^13.4.12",
     "fastq": "^1.15.0",
+    "fluent-ffmpeg": "^2.1.2",
     "google-auth-library": "^8.9.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.259.0",
-    "next": "13.4.7",
-    "next-auth": "^4.22.3",
-    "next-themes": "^0.2.1",
+    "next": "14.0.0",
+    "next-auth": "^4.24.4",
     "node-cache": "^5.1.2",
-    "photoswipe": "^5.3.8",
+    "photoswipe": "^5.2.2",
     "postcss": "8.4.24",
     "qrcode": "^1.5.3",
     "react": "18.2.0",
@@ -61,7 +59,7 @@
     "react-hover-video-player": "^10.0.1",
     "react-icons": "^4.10.1",
     "react-photoswipe-gallery": "^2.2.7",
-    "react-redux": "^8.1.1",
+    "react-redux": "^8.1.3",
     "react-toastify": "^9.1.3",
     "resend": "^1.1.0",
     "shaka-player": "^4.4.2",
