Updates on thumbs

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "resend": "^1.1.0",
     "shaka-player": "^4.4.2",
     "sharp": "^0.32.5",
+    "stream-to-buffer": "^0.1.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
