--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@uppy/react": "^3.1.3",
     "@uppy/status-bar": "^3.2.3",
     "@uppy/tus": "^3.1.2",
+    "@videojs/themes": "^1.0.1",
     "autoprefixer": "^10.4.14",
     "aws-sdk": "^2.1430.0",
     "axios": "^1.4.0",
@@ -79,6 +80,7 @@
     "@types/qrcode": "^1.5.1",
     "@types/react-portal": "^4.0.4",
     "@types/validator": "^13.7.17",
+    "@types/video.js": "^7.3.55",
     "prisma": "^5.0.0",
     "tailwindcss-animate": "^1.0.6",
     "webpack-node-externals": "^3.0.0"
